@@ -37,6 +37,7 @@
 * LuxCoreRender can now be compiled without OpenCL/CUDA SDK and it will load OpenCL/CUDA at run time (one executable can now be used for all types of installations)
 * RTPathOCLRenderEngine::WaitNewFrame() takes is not more synchronous with rendering refresh
 * The use of more than 64 logical processors on Windows is now extended to all render engines
+* It is now possible to render scenes without light sources (!)
 
 ### Fixed Bugs
 
